kubernetes/apps/security/argo-apps/gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: security-gateway
  namespace: security
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https-vault
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: vault # must be the same as secret
    hosts:
    - "vault.abasitt.tech"
  - port:
      number: 80
      name: http-vault
      protocol: HTTP
    hosts:
    - "vault.abasitt.tech"
#  - port:
#      number: 443
#      name: https-temp
#      protocol: HTTPS
#    tls:
#      mode: SIMPLE
#      credentialName: temp # must be the same as secret
#    hosts:
#    - "temp.abasitt.tech"
#  - port:
#      number: 80
#      name: http-temp
#      protocol: HTTP
#    hosts:
#    - "temp.abasitt.tech"
